--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -1,5 +1,5 @@
 <div class="toolbar" id="toolbar">
-  <h1>The Rabbit Hole</h1>
+  <h1>Source.it</h1>
 
   <h2>Find Music</h2>
   <div class="search" id="search">
