--- a/app/assets/javascripts/behind_the_curtain/templates/home.html
+++ b/app/assets/javascripts/behind_the_curtain/templates/home.html
@@ -1,2 +1,3 @@
 <h1>Home</h1>
-<img src='http://downtownmusicstudios.com/public/images/v4-8-Live-Room-5I2A4116.jpg'>
+<div class="viewpanel">
+</div>
