--- a/app/assets/javascripts/behind_the_curtain/templates/producerdetail.html
+++ b/app/assets/javascripts/behind_the_curtain/templates/producerdetail.html
@@ -1,8 +1,10 @@
-<a href="#home">Home</a>
+<div class="producerdetail">
+  <a href="#home">Home</a>
 
-<ul>
-  <% _.each(tracks, function(track) { %>
-    <li><%= track.name %></li>
-  <% }) %>
+  <ul>
+    <% _.each(tracks, function(track) { %>
+      <li><%= track.name %></li>
+    <% }) %>
 
-</ul>
+  </ul>
+</div>
