--- a/app/assets/javascripts/behind_the_curtain/templates/artistdetail.html
+++ b/app/assets/javascripts/behind_the_curtain/templates/artistdetail.html
@@ -1,3 +1,4 @@
+<div class="artistdetail">
 <a href="#home">Home</a>
 <h1><%= model.get('name') %></h1>
 <a href="<%= model.getURL() %>">Open in Spotify</a>
@@ -6,8 +7,8 @@
   <img src="<%= model.getImage() %>" alt=""/>
 <% } %>
 
-<h2>Related Artists</h2>
-
+<!-- <h2>Related Artists</h2>
+ -->
 <ul>
 
   <% _.each(model.artists, function(artist) { %>
@@ -15,4 +16,5 @@
   <% }) %>
 
 </ul>
+</div>
 
